# qiskit-qec-noise-sim

./: README.md  pyproject.toml  requirements.txt
paper/: README.md  main.tex  make_tables.py
paper/tables/: bitflip_summary.tex  depolarizing_summary.tex  phaseflip_summary.tex
results/: bitflip_results.csv  depolarizing_results.csv  phaseflip_results.csv
scripts/: run_experiments.py
src/qc1ec/: __init__.py  __main__.py  circuits.py  decode.py  experiments.py  noise.py  plotting.py
tests/: test_ec_improves.py
