[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qc1-error-correction"
version = "0.1.0"
description = "Qiskit (Aer) simulations comparing simple quantum error-correction codes under noise"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]

dependencies = [
  "qiskit>=1.2",
  "qiskit-aer>=0.15",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
